[package]
name = "diesel_survivors"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.19"
diesel_avian3d = { path = "../bevy_diesel/backends/diesel_avian3d", features = ["server", "diesel_diagnostics"] }
bevy_diesel = "0.2"
avian3d = "0.7"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
